--- a/week5/page.html
+++ b/week5/page.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="page.css" />
     </head>
     <body>
+        <h1>Love you</h1>
         <header class="header">
             <h3 class="headline">[Шапка страницы]</h3>
         </header>
