--- a/week6/page-grid.html
+++ b/week6/page-grid.html
@@ -5,20 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="page.css" />
+        <link rel="stylesheet" href="style.css/page-grid.css" />
     </head>
     <body>
-        <header class="header">
-            <h3 class="headline">[Шапка страницы]</h3>
-        </header>
+        <header class="header">[Шапка страницы]</header>
         <main class="main">
-            <section class="container">
-                <div class="content">[Основная часть]</div>
-                <div class="items">
-                    <div class="item_1">[Ещё 1]</div>
-                    <div class="item_2">[Ещё 2]</div>
+            <section class="section">
+                <h2>[Основная часть]</h2>
+                <div class="container">
+                    <div class="content_1">[Ещё один]</div>
+                    <div class="content_2">[Ещё два]</div>
+                    <div class="content_3">[Ещё три]</div>
                 </div>
-                <div class="item_3">[Ещё 3]</div>
             </section>
             <aside class="aside">[Боковая область]</aside>
         </main>
