--- a/week5/page.html
+++ b/week5/page.html
@@ -12,13 +12,13 @@
             <h3 class="headline">[Шапка страницы]</h3>
         </header>
         <main class="main">
-            <section class="container">
-                <div class="content">[Основная часть]</div>
-                <div class="items">
-                    <div class="item_1">[Ещё 1]</div>
-                    <div class="item_2">[Ещё 2]</div>
+            <section class="section">
+                <h2>[Основная часть]</h2>
+                <div class="flex-container">
+                    <div class="flex__item flex__item_one">[Ещё 1]</div>
+                    <div class="flex__item flex__item_two">[Ещё 2]</div>
+                    <div class="flex__item flex__item_three">[Ещё 3]</div>
                 </div>
-                <div class="item_3">[Ещё 3]</div>
             </section>
             <aside class="aside">[Боковая область]</aside>
         </main>
