--- a/week5/page.html
+++ b/week5/page.html
@@ -23,10 +23,10 @@
             <aside class="aside">[Боковая область]</aside>
         </main>
         <footer class="footer">
-            <div class="footer_item">[Секция футера 1]</div>
-            <div class="footer_item">[Секция футера 2]</div>
-            <div class="footer_item">[Секция футера 3]</div>
-            <div class="footer_item">[Секция футера 4]</div>
+            <div class="footer__item">[Секция футера 1]</div>
+            <div class="footer__item">[Секция футера 2]</div>
+            <div class="footer__item">[Секция футера 3]</div>
+            <div class="footer__item">[Секция футера 4]</div>
         </footer>
     </body>
 </html>
