--- a/week7/adaptive/page-grid.html
+++ b/week7/adaptive/page-grid.html
@@ -5,18 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="style.css/page-grid.css" />
+        <link rel="stylesheet" href="page-grid.css" />
     </head>
     <body>
         <header class="header">[Шапка страницы]</header>
         <main class="main">
-            <section class="section">
-                <h2>[Основная часть]</h2>
-                <div class="grid-container">
-                    <div class="grid__item grid__item_one">[Ещё один]</div>
-                    <div class="grid__item grid__item_two">[Ещё два]</div>
-                    <div class="grid__item grid__item_three">[Ещё три]</div>
-                </div>
+            <h2>[Основная часть]</h2>
+            <section class="grid-container">
+                <div class="grid__item grid__item_one">[Ещё один]</div>
+                <div class="grid__item grid__item_two">[Ещё два]</div>
+                <div class="grid__item grid__item_three">[Ещё три]</div>
             </section>
             <aside class="aside">[Боковая область]</aside>
         </main>
